--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center_horizontal"
-              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:lines="2"
-            android:text="stateful/stateMode"/>
+            android:text="stateful/stateMode" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -30,7 +30,7 @@
             app:fillMode="solid"
             app:shape="rect"
             app:stateMode="click"
-            app:stateful="false"/>
+            app:stateful="false" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundButton
             android:layout_width="wrap_content"
@@ -44,7 +44,7 @@
             app:fillMode="solid"
             app:shape="rect"
             app:stateMode="click"
-            app:stateful="true"/>
+            app:stateful="true" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundCheckBox
             android:id="@+id/cb"
@@ -58,11 +58,11 @@
             app:colorStroke="@color/lighter_blue"
             app:colorUnchecked="@android:color/white"
             app:fillMode="solid"
-            app:shape="side_circle_rect"
+            app:shape="semicircle_rect"
             app:stateMode="check"
             app:stateful="true"
             app:strokeMode="solid"
-            app:strokeWidth="1dp"/>
+            app:strokeWidth="1dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:lines="2"
-            android:text="shape"/>
+            android:text="shape" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
             app:colorNormal="@color/lighter_blue"
             app:fillMode="solid"
             app:shape="rect"
-            app:stateful="false"/>
+            app:stateful="false" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -102,7 +102,7 @@
             app:fillMode="solid"
             app:radius="10dp"
             app:shape="round_rect"
-            app:stateful="false"/>
+            app:stateful="false" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -110,11 +110,11 @@
             android:layout_marginLeft="5dp"
             android:gravity="center"
             android:padding="5dp"
-            android:text="side_circle_rect"
+            android:text="semicircle_rect"
             app:colorNormal="@color/lighter_blue"
             app:fillMode="solid"
-            app:shape="side_circle_rect"
-            app:stateful="false"/>
+            app:shape="semicircle_rect"
+            app:stateful="false" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -126,7 +126,7 @@
             app:colorNormal="@color/lighter_blue"
             app:fillMode="solid"
             app:shape="circle"
-            app:stateful="false"/>
+            app:stateful="false" />
     </LinearLayout>
 
 
@@ -142,7 +142,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:lines="2"
-            android:text="fillMode"/>
+            android:text="fillMode" />
 
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
@@ -155,7 +155,7 @@
             app:colorNormal="@color/lighter_blue"
             app:fillMode="solid"
             app:shape="rect"
-            app:stateful="false"/>
+            app:stateful="false" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -168,7 +168,7 @@
             app:colorNormal="@color/lighter_blue"
             app:fillMode="bitmap"
             app:shape="rect"
-            app:stateful="false"/>
+            app:stateful="false" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -182,7 +182,7 @@
             app:colorPressed="#88FFFFFF"
             app:fillMode="solid|bitmap"
             app:shape="rect"
-            app:stateful="true"/>
+            app:stateful="true" />
     </LinearLayout>
 
     <LinearLayout
@@ -197,7 +197,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:lines="2"
-            android:text="scaleType"/>
+            android:text="scaleType" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="50dp"
@@ -213,7 +213,7 @@
             app:shape="rect"
             app:stateful="false"
             app:strokeMode="solid"
-            app:strokeWidth="1dp"/>
+            app:strokeWidth="1dp" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -229,7 +229,7 @@
             app:shape="rect"
             app:stateful="false"
             app:strokeMode="solid"
-            app:strokeWidth="1dp"/>
+            app:strokeWidth="1dp" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -245,7 +245,7 @@
             app:shape="rect"
             app:stateful="false"
             app:strokeMode="solid"
-            app:strokeWidth="1dp"/>
+            app:strokeWidth="1dp" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -261,7 +261,7 @@
             app:shape="rect"
             app:stateful="false"
             app:strokeMode="solid"
-            app:strokeWidth="1dp"/>
+            app:strokeWidth="1dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -276,7 +276,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:lines="2"
-            android:text="strokeMode"/>
+            android:text="strokeMode" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -288,10 +288,10 @@
             app:colorNormal="@android:color/white"
             app:colorStroke="@color/lighter_blue"
             app:fillMode="solid"
-            app:shape="side_circle_rect"
+            app:shape="semicircle_rect"
             app:stateful="false"
             app:strokeMode="solid"
-            app:strokeWidth="2dp"/>
+            app:strokeWidth="2dp" />
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -307,11 +307,24 @@
             app:strokeDashSolid="5dp"
             app:strokeDashSpace="5dp"
             app:strokeMode="dash"
-            app:strokeWidth="2dp"/>
+            app:strokeWidth="2dp" />
     </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="see more attributes in /res/values/attr.xml"/>
+        android:text="see more attributes in /res/values/attr.xml" />
+
+    <com.ytb.myapp.widget.commonbackground.CommonBackgroundButton
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_margin="8dp"
+        app:colorPressed="@android:color/darker_gray"
+        app:colorStroke="@color/lighter_blue"
+        app:radius="8dp"
+        app:shape="round_rect"
+        app:stateMode="click"
+        app:stateful="true"
+        app:strokeMode="solid"
+        app:strokeWidth="3dp" />
 </LinearLayout>
