--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,17 +2,15 @@
 <resources>
     <!-- 通用背景图属性定义 -->
     <declare-styleable name="CommonBackground">
-        <!-- 是否区分点击（disabled/normal/pressed）或选择（disabled/unchecked/checked）状态 -->
-        <attr name="stateful" format="boolean"/>
-
         <!-- 状态的区分模式-->
-        <attr name="stateMode">
-            <enum name="click" value="0"/><!-- 点击模式，类似于Button -->
-            <enum name="check" value="1"/><!-- 选择模式，类似于CheckBox -->
+        <attr name="bg_stateMode">
+            <enum name="none" value="0"/><!-- 无状态 -->
+            <enum name="click" value="1"/><!-- 点击模式，类似于Button -->
+            <enum name="check" value="2"/><!-- 选择模式，类似于CheckBox -->
         </attr>
 
         <!-- 形状 -->
-        <attr name="shape">
+        <attr name="bg_shape">
             <enum name="rect" value="0"/>
             <enum name="round_rect" value="1"/><!-- 圆角矩形 -->
             <enum name="semicircle_rect" value="2"/><!-- 圆头矩形（自动计算半径） -->
@@ -20,13 +18,13 @@
         </attr>
 
         <!-- 填充模式，若为solid|bitmap，此时填充色将作为图片蒙层，注意设置填充色的透明度 -->
-        <attr name="fillMode">
+        <attr name="bg_fillMode">
             <flag name="solid" value="1"/><!-- 纯色填充 -->
             <flag name="bitmap" value="2"/><!-- 图片填充 -->
         </attr>
 
         <!-- 填充图的缩放类型 -->
-        <attr name="scaleType">
+        <attr name="bg_scaleType">
             <enum name="center" value="0"/>
             <enum name="centerCrop" value="1"/><!-- 对齐控件width/height中的大者 -->
             <enum name="fitCenter" value="2"/><!-- 对齐控件width/height中的小者 -->
@@ -34,21 +32,25 @@
         </attr>
 
         <!-- 描边模式 -->
-        <attr name="strokeMode">
+        <attr name="bg_strokeMode">
             <enum name="none" value="0"/>
             <enum name="solid" value="1"/><!-- 实线描边 -->
             <enum name="dash" value="2"/><!-- 断续线描边 -->
         </attr>
-        <attr name="radius" format="dimension"/><!-- 圆角半径/形状为圆时的半径 -->
-        <attr name="strokeWidth" format="dimension"/><!-- 描边宽度 -->
-        <attr name="strokeDashSolid" format="dimension"/><!-- 断续线描边时，每一段实线的长度 -->
-        <attr name="strokeDashSpace" format="dimension"/><!-- 断续线描边时，每一段空白的长度 -->
-        <attr name="colorDisabled" format="color"/><!-- 各种状态的颜色 -->
-        <attr name="colorNormal" format="color"/>
-        <attr name="colorPressed" format="color"/>
-        <attr name="colorUnchecked" format="color"/>
-        <attr name="colorChecked" format="color"/>
-        <attr name="colorStroke" format="color"/><!-- 描边颜色 -->
-        <attr name="bitmap" format="reference"/><!-- 填充图资源id -->
+        <attr name="bg_radius" format="dimension"/><!-- 圆角半径/形状为圆时的半径 -->
+        <attr name="bg_radiusLeftTop" format="dimension"/>
+        <attr name="bg_radiusLeftBottom" format="dimension"/>
+        <attr name="bg_radiusRightTop" format="dimension"/>
+        <attr name="bg_radiusRightBottom" format="dimension"/>
+        <attr name="bg_strokeWidth" format="dimension"/><!-- 描边宽度 -->
+        <attr name="bg_strokeDashSolid" format="dimension"/><!-- 断续线描边时，每一段实线的长度 -->
+        <attr name="bg_strokeDashSpace" format="dimension"/><!-- 断续线描边时，每一段空白的长度 -->
+        <attr name="bg_colorDisabled" format="color"/><!-- 各种状态的颜色 -->
+        <attr name="bg_colorNormal" format="color"/>
+        <attr name="bg_colorPressed" format="color"/>
+        <attr name="bg_colorUnchecked" format="color"/>
+        <attr name="bg_colorChecked" format="color"/>
+        <attr name="bg_colorStroke" format="color"/><!-- 描边颜色 -->
+        <attr name="bg_bitmap" format="reference"/><!-- 填充图资源id -->
     </declare-styleable>
 </resources>
