--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center_horizontal"
+              android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:lines="2" />
+            android:lines="2"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -28,7 +28,7 @@
             app:bg_colorNormal="@color/lighter_blue"
             app:bg_fillMode="solid"
             app:bg_shape="rect"
-            app:bg_stateMode="click" />
+            app:bg_stateMode="click"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundButton
             android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
             app:bg_colorPressed="@color/darker_blue"
             app:bg_fillMode="solid"
             app:bg_shape="rect"
-            app:bg_stateMode="click" />
+            app:bg_stateMode="click"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundCheckBox
             android:id="@+id/cb"
@@ -58,7 +58,7 @@
             app:bg_shape="semicircle_rect"
             app:bg_stateMode="check"
             app:bg_strokeMode="solid"
-            app:bg_strokeWidth="1dp" />
+            app:bg_strokeWidth="1dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:lines="2"
-            android:text="shape" />
+            android:text="shape"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -84,7 +84,7 @@
             android:text="rect"
             app:bg_colorNormal="@color/lighter_blue"
             app:bg_fillMode="solid"
-            app:bg_shape="rect" />
+            app:bg_shape="rect"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -96,7 +96,7 @@
             app:bg_colorNormal="@color/lighter_blue"
             app:bg_fillMode="solid"
             app:bg_radius="10dp"
-            app:bg_shape="round_rect" />
+            app:bg_shape="round_rect"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -107,7 +107,7 @@
             android:text="semicircle_rect"
             app:bg_colorNormal="@color/lighter_blue"
             app:bg_fillMode="solid"
-            app:bg_shape="semicircle_rect" />
+            app:bg_shape="semicircle_rect"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -118,7 +118,7 @@
             android:text="circle"
             app:bg_colorNormal="@color/lighter_blue"
             app:bg_fillMode="solid"
-            app:bg_shape="circle" />
+            app:bg_shape="circle"/>
     </LinearLayout>
 
 
@@ -134,7 +134,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:lines="2"
-            android:text="fillMode" />
+            android:text="fillMode"/>
 
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
@@ -146,7 +146,7 @@
             android:text="solid"
             app:bg_colorNormal="@color/lighter_blue"
             app:bg_fillMode="solid"
-            app:bg_shape="rect" />
+            app:bg_shape="rect"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -158,7 +158,7 @@
             app:bg_bitmap="@mipmap/ic_launcher"
             app:bg_colorNormal="@color/lighter_blue"
             app:bg_fillMode="bitmap"
-            app:bg_shape="rect" />
+            app:bg_shape="rect"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -168,11 +168,11 @@
             android:padding="5dp"
             android:text="solid|bitmap\n(click me)"
             app:bg_bitmap="@mipmap/ic_launcher"
-            app:bg_stateMode="click"
             app:bg_colorNormal="#FFFFFFFF"
             app:bg_colorPressed="#88FFFFFF"
             app:bg_fillMode="solid|bitmap"
-            app:bg_shape="rect" />
+            app:bg_shape="rect"
+            app:bg_stateMode="click"/>
     </LinearLayout>
 
     <LinearLayout
@@ -187,7 +187,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:lines="2"
-            android:text="scaleType" />
+            android:text="scaleType"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="50dp"
@@ -202,7 +202,7 @@
             app:bg_scaleType="center"
             app:bg_shape="rect"
             app:bg_strokeMode="solid"
-            app:bg_strokeWidth="1dp" />
+            app:bg_strokeWidth="1dp"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -217,7 +217,7 @@
             app:bg_scaleType="centerCrop"
             app:bg_shape="rect"
             app:bg_strokeMode="solid"
-            app:bg_strokeWidth="1dp" />
+            app:bg_strokeWidth="1dp"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -232,7 +232,7 @@
             app:bg_scaleType="fitCenter"
             app:bg_shape="rect"
             app:bg_strokeMode="solid"
-            app:bg_strokeWidth="1dp" />
+            app:bg_strokeWidth="1dp"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -247,7 +247,7 @@
             app:bg_scaleType="fitXY"
             app:bg_shape="rect"
             app:bg_strokeMode="solid"
-            app:bg_strokeWidth="1dp" />
+            app:bg_strokeWidth="1dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -262,7 +262,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:lines="2"
-            android:text="strokeMode" />
+            android:text="strokeMode"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -276,7 +276,7 @@
             app:bg_fillMode="solid"
             app:bg_shape="semicircle_rect"
             app:bg_strokeMode="solid"
-            app:bg_strokeWidth="2dp" />
+            app:bg_strokeWidth="2dp"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundTextView
             android:layout_width="wrap_content"
@@ -291,24 +291,26 @@
             app:bg_strokeDashSolid="5dp"
             app:bg_strokeDashSpace="5dp"
             app:bg_strokeMode="dash"
-            app:bg_strokeWidth="2dp" />
+            app:bg_strokeWidth="2dp"/>
     </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="see more attributes in /res/values/attr.xml" />
+        android:text="see more attributes in /res/values/attr.xml"/>
 
     <com.ytb.myapp.widget.commonbackground.CommonBackgroundButton
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_margin="8dp"
-        app:bg_colorPressed="@android:color/darker_gray"
-        app:bg_colorStroke="@color/lighter_blue"
-        app:bg_radiusLeftTop="18dp"
+        app:bg_bitmap="@mipmap/icon"
+        app:bg_colorStroke="@color/colorAccent"
+        app:bg_fillMode="bitmap"
         app:bg_radiusLeftBottom="26dp"
+        app:bg_radiusLeftTop="18dp"
+        app:bg_scaleType="fitXY"
         app:bg_shape="round_rect"
-        app:bg_stateMode="click"
+        app:bg_stateMode="none"
         app:bg_strokeMode="solid"
-        app:bg_strokeWidth="5dp" />
+        app:bg_strokeWidth="2dp"/>
 </LinearLayout>
